--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,47 +1,23 @@
-appdirs==1.4.4
-arandr==0.1.10
-btrfsutil==5.12.1
-CacheControl==0.12.6
-cffi==1.14.5
-chardet==4.0.0
-click==8.0.1
+astroid==2.4.2
+click==7.1.2
 colorama==0.4.4
-contextlib2==0.6.0.post1
-cryptography==3.4.7
-distlib==0.3.2
-distro==1.5.0
 dnspython==1.16.0
-filelock==3.0.12
-Flask==2.0.1
-Flask-Cors==3.0.10
-gunicorn==20.1.0
-html5lib==1.1
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-Markdown==3.3.4
-MarkupSafe==2.0.1
-more-itertools==8.7.0
-msgpack==1.0.2
-ordered-set==4.0.2
-packaging==20.9
-pep517==0.10.0
-Pillow==8.2.0
-ply==3.11
-progress==1.5
-pycairo==1.20.0
-pycparser==2.20
-PyGObject==3.40.1
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-ranger-fm==1.9.3
-requests==2.25.1
-resolvelib==0.5.5
-retrying==1.3.3
-six==1.16.0
-team==1.0
+dominate==2.5.1
+Flask==1.1.2
+Flask-Cors==3.0.9
+gunicorn==20.0.4
+isort==5.6.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pylint==2.6.0
+pymongo==3.10.1
+python-dotenv==0.14.0
+six==1.15.0
 toml==0.10.2
-urllib3==1.26.5
-virtualenv==20.4.7
-webencodings==0.5.1
-Werkzeug==2.0.1
+visitor==0.1.3
+Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.1
